--- a/styles.css
+++ b/styles.css
@@ -1,83 +1,92 @@
-
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
 }
 header {
-    display: flex;
-    background-color: dodgerblue;
+  display: flex;
+  background-color: dodgerblue;
 }
-.logo  > p {
-    padding: 0 .5rem;
-    color: white;
-}
-header > div {
-    flex: 1;
-}
-header > nav {
-    width: 100%;
-    display: flex;
-    flex:3;
-    justify-content: center;
-}
-#nava {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    font-size: small;
-    height: 50px;
-    width: 100%;
+.logo > p {
+  padding: 0 0.5rem;
+  color: white;
 }
 .logo {
-    flex: 1;
+  flex: 1;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+  color: white;
+  font-size: small;
 }
 
-
-h1, h2 {
-    color: slategrey;
-    padding: .5rem;
+h1,
+h2 {
+  color: slategrey;
+  padding: 0.5rem;
 }
 #user {
-    display:flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
 }
 form {
-    border: solid black 1px;
-    border-radius: .25em;
-    margin: 2rem;
-    width: 50%;
+  border: solid black 1px;
+  border-radius: 0.25em;
+  margin: 2rem;
+  width: 50%;
 }
-#save{
-    background-color:dodgerblue;
+#save {
+  background-color: dodgerblue;
 }
 label {
-    font-size: small;
-    color: slategrey;
-    padding: 1em;
-    margin: 1em;
+  font-size: small;
+  color: slategrey;
+  padding: 1em;
+  margin: 1em;
 }
-#cards {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+#cards > div {
+  display: flex;
+  flex-flow: row wrap;
 }
-
 
 .card {
-    text-align: center;
-    padding: 1rem 4rem;
-    margin: .5rem;
-    border: solid black 1px;
-    border-radius: .5em;
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+  padding: 1rem 4rem;
+  margin: 0.5rem;
+  border: solid black 1px;
+  border-radius: 0.5em;
+  flex: 0 0 calc(100% / 3 -10rem);
 }
 
-@media(max-width: 500px) {
-    header{
+@media (max-width: 600px) {
+  header,
+  nav {
+      display: flex;
+    flex-flow: column;
+  }
+ 
+  .item {
+    align-self: flex-start;
+    padding: 0.5rem 1em;
+  }
 
-        flex-flow: column wrap;
-        
-    }
-    body {flex-flow: column;
-    }
+  /* .card {
+    flex: 0 0 calc(100% - 2rem);
+  } */
+  #cards > div {
+    flex-flow: column;
+  }
+  form > div {
+      display:flex;
+      flex-flow:column;
+  }
+  button {
+  
+  }
 }
